--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<h1><a href="index.html"><strong>Andrik Santos</strong> Certificates</a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
@@ -147,34 +147,34 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<h2>Andrik Santos - Certificates</h2>
+									<p>Official website where i show my gallery of certifications... A computer scientist with certain skills such as Web Development, Computer Security, Applications Development and Graphic Design, apart from that, I like to optimize processes, always on the way to innovation</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://twitter.com/andrik_rsm" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/andrik.rsm" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/andriksantos12/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://github.com/andriksantos" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/andriksantos/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://dribbble.com/andriksantos" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; <script>document.write(new Date().getFullYear());</script> All rights reserved. Design: <a href="https://andriksantos.github.io/">AndrikSantos</a>.
 								</p>
 							</div>
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<form method="post" action="#">
+									<form action="https://formspree.io/andricksantos1@gmail.com" method="POST">
 										<div class="fields">
 											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
+												<input type="text" name="name" id="name" placeholder="Name" required/>
 											</div>
 											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
+												<input type="text" name="_replyto" id="email" placeholder="Email" required/>
 											</div>
 											<div class="field">
 												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
@@ -193,12 +193,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
