--- a/index.html
+++ b/index.html
@@ -199,6 +199,6 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-
+		<!-- Andrik Santos -->
 	</body>
 </html>
